--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "showdown-footnotes",
+  "name": "@webdesigndecal/showdown-footnotes",
   "description": "A simple footnotes implementation for Showdown.",
   "license": "MIT",
   "repository": "https://github.com/Kriegslustig/showdown-footnotes.git",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "main": "dist/index.js",
   "dependencies": {
     "showdown": "^1.4.1"
@@ -21,4 +21,7 @@
     "watch-build": "watch 'npm run build -- --source-maps inline -w' src"
   },
   "author": "Kriegslustig <npm@ls7.ch>"
+  "contributors": [
+      "Web Design DeCal"
+  ]
 }
