--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "babel --presets babel-preset-es2015 src --out-dir dist",
     "watch-build": "watch 'npm run build -- --source-maps inline -w' src"
   },
-  "author": "Kriegslustig <npm@ls7.ch>"
+  "author": "Kriegslustig <npm@ls7.ch>",
   "contributors": [
       "Web Design DeCal"
   ]
